# address-book-parser

./: .env.local_example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/persons/db/: Jul 29 - 1657.db
docs/: _index.md  address_books_information.md  basic_usage.md  data_models.md  project_description.md
libs/db_handler/src/: open_db.py  to_db.py
libs/file_handler/src/: extractor.py  extractor_strategy.py
libs/regex/src/: apply_regex_patterns.py  substitute_with_map.py
modules/: __main__.py  demo.py  setup.py
modules/address_books/src/: __main__.py  csv_transcription.py  setup.py
modules/analysis/: README.md  distribution_of_years_at_same_address.py  distribution_of_years_at_same_address_calculator.py
modules/common/: csv_column_names.py  special_chars.py  table_names.py
modules/models/: address.py  addressBook.py  addressBookPage.py  person.py  raw_person.py
modules/pages_downloader/: README.md
modules/pages_downloader/Basel/: __main__.py  download_entire_book_pdfs.py  setup.py
modules/pages_downloader/Bern/: __main__.py  download_file.py
modules/pages_downloader/src/: __main__.py  create_folders.py  download_entire_book_pdfs.py  setup.py  (+3 more)
modules/panel_data/: README.md
modules/persons_data_processor/: README.md
modules/shared/: config.py  database_table_names.py  paths.py
src/: __main__.py  demo.py  setup.py
src/analysis/: README.md  distribution_of_years_at_same_address.py  household_size.sql
src/pages_preprocessor/: README.md
src/regex/: README.md
src/repository/: README.md
src/transcriptor/: README.md
(+46150 files in other folders)
